--- a/CIS470E/CIS470E/CIS470E.csproj
+++ b/CIS470E/CIS470E/CIS470E.csproj
@@ -76,11 +76,19 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="PrintEngrave.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="PrintEngrave.aspx.cs">
+      <DependentUpon>PrintEngrave.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="PrintEngrave.aspx.designer.cs">
+      <DependentUpon>PrintEngrave.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
